--- a/assemblies/pentaho-data/pom.xml
+++ b/assemblies/pentaho-data/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>pentaho</groupId>
     <artifactId>pentaho-platform-assemblies</artifactId>
-    <version>8.0-SNAPSHOT</version>
+    <version>8.0.0.0-9</version>
   </parent>
   <artifactId>pentaho-data</artifactId>
-  <version>8.0-SNAPSHOT</version>
+  <version>8.0.0.0-9</version>
   <packaging>pom</packaging>
   <dependencies>
     <dependency>
